Workshop3/fortune.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: myns
  labels: 
    dept: engineering
    app: fortune
---
apiVersion: v1
kind: Pod
metadata:
  name: fortune-pod
  namespace: myns
  labels:
    dept: engineering 
    app: fortune
spec: 
  containers:
  - name: fortune-container 
    image: chukmunnlee/fortune:v1
    imagePullPolicy: IfNotPresent
    ports: 
    - name: http-port 
      containerPort: 4321
