Workshop3/fortune-deploy.yaml
---
# write deployment
apiVersion: apps/v1
kind: Deployment
metadata:
   name: fortune-deploy
   labels:
      app: fortune
spec:
   replicas: 2
   selector:
      matchLabels:
         app: fortune-pod
   template:
      # pod yaml 
      metadata:
         name: fortune-pod
         labels:
            app: fortune-pod
      spec:
         containers:
         - name: fortune-container
           image: chukmunnlee/fortune:v1
           imagePullPolicy: IfNotPresent
           ports:
           - name: fortune-port 
             containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: fortune-svc
  labels:
    app: fortune

spec:
  type: ClusterIP
  selector:
    app: fortune-pod
  ports:
    - name: app-port
      port: 8090
      targetPort: fortune-port
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fortune-ing
  labels:
    app: fortune
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "fortune.167.172.6.115.nip.io"
    http:
      paths:
        - path: /
          backend:
            serviceName: fortune-svc
            servicePort: app-port
